--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -25,5 +25,11 @@ h1, p {
   font-family: "AvertaPE", Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: 150%;
-  font-weight: 500;
+  font-weight: 400;
+}
+
+@media screen and (max-width: 600px) {
+  .sf-landing-page h1 {
+    font-size: 32px;
+  }
 }
