--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -48,7 +48,7 @@ h1, p {
 }
 
 .element-container:focus {
-  box-shadow: : 0 0 10px red;
+  box-shadow: : 0 0 10px red !important;
 }
 
 .submit-box-container > .element-container {
