--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -47,8 +47,8 @@ h1, p {
   color: #333333 !important;
 }
 
-input:focus {
-  box-shadow: inset 0 0 0 1px red !important;
+input:focus, .element-container:focus {
+  box-shadow: inset 0 0 0 2px #88E766 !important;
 }
 
 .submit-box-container > .element-container {
