--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -85,6 +85,11 @@ section.row {
   margin-left: 8px !important;
 }
 
+/* Header */
+
+#header {
+  padding: 0 !important;
+}
 
 /* Footer */
 #footer {
