--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -176,7 +176,7 @@ section.row {
   border-radius: 6px;
 }
 
-.linebox h2 {
+.linebox h1, h2, h3, h4 {
   padding: 0 !important;
   margin: 0 !important;
 }
