--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -157,17 +157,18 @@ section.row {
 
 /* Components */
 /* Line Box */
-.linebox_dsb {
-  background: #CCECFF;
+.linebox {
   padding: 40px 16px;
   border-radius: 6px;
+}
+
+.linebox_dsb {
+  background: #CCECFF;
 }
 
 .linebox_outline {
   background: #FFFFFF;
   border: 1px solid #DDE1E3;
-  padding: 40px 40px;
-  border-radius: 6px;
 }
 
 .linebox h1, h2, h3, h4 {
@@ -183,24 +184,23 @@ section.row {
 /* Mobile */
 
 @media screen and (max-width: 768px) {
-  .sf-landing-page h1, {
+  .sf-landing-page h1 {
     font-size: 32px;
   }
 
-  .sf-landing-page h2, {
+  .sf-landing-page h2 {
     font-size: 24px;
   }
 
-  .sf-landing-page h3, {
+  .sf-landing-page h3 {
     font-size: 20px;
   }
 
-  .sf-landing-page h4, {
+  .sf-landing-page h4 {
     font-size: 16px;
   }
 
-  .linebox_outline {
+  .linebox {
     padding: 40px 16px;
   }
-
 }
