--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -211,5 +211,5 @@ section.row {
 
 /* Workshop */
 #workshop > section > div, #workshop > section > div > div {
-  height: 100%;
+  height: 100% !important;
 }
