--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -183,20 +183,6 @@ section.row {
 
 
 /* Form */
-#netcomm2022form .form form {
-  max-width: 100%;
-  background-color: #CCECFF;
-  border-radius: 6px;
-  border: none;
-  padding: 40px 24px;
-}
-
-#netcomm2022form .form form .user-form-body {
-  max-width: 600px;
-  width: 100%;
-  margin: 0 auto;
-}
-
 .field-label {
   font-family: "AvertaPE", Arial, Helvetica, sans-serif !important;
   font-weight: 500 !important;
@@ -228,4 +214,19 @@ section.row {
 .radio-check-label {
   margin-top: 8px !important;
   margin-left: 8px !important;
+}
+
+
+#netcomm2022form .user-form-template {
+  max-width: 100%;
+  background-color: #CCECFF;
+  border-radius: 6px;
+  border: none;
+  padding: 40px 24px;
+}
+
+#netcomm2022form .user-form-body {
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
 }
