--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -96,6 +96,8 @@ section.row {
   font-weight: 500;
   line-height: 24px;
   font-size: 16px;
+  border: 1px solid #0091E5;
+  cursor: pointer;
 }
 
 /* Footer */
@@ -186,21 +188,40 @@ section.row {
 .field-label {
   font-family: "AvertaPE", Arial, Helvetica, sans-serif !important;
   font-weight: 500 !important;
-  margin-bottom: 0 !important;
-  color: #464D53 !important;
+  margin: 0 !important;
+  color: #232629 !important;
+}
+
+.required-field {
+  display: none !important;
 }
 
 .element-container {
   font-family: "AvertaPE", Arial, Helvetica, sans-serif !important;
   color: #464D53 !important;
+  border: 1px solid #BAC0C4;
+  border-radius: 6px;
+  padding: 12px 16px 10px 16px;
+  font-size: 16px;
+  line-height: 24px;
+  height: auto;
+  margin: 0;
 }
 
 .submit-box-container > .element-container {
+  background: #0091E5;
+  border-radius: 100px;
+  display: inline-block;
+  padding: 8px 24px;
+  text-align: center;
+  word-break: break-word;
   color: #FFFFFF !important;
-}
-
-.required-field {
-  display: none !important;
+  text-decoration: none !important;
+  font-weight: 500;
+  line-height: 24px;
+  font-size: 16px;
+  border: 1px solid #0091E5;
+  cursor: pointer;
 }
 
 #field37 .field-label {
