--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -199,33 +199,29 @@ section.row {
 .element-container {
   font-family: "AvertaPE", Arial, Helvetica, sans-serif !important;
   color: #464D53 !important;
-  border: 1px solid #BAC0C4;
-  border-radius: 6px;
-  padding: 12px 16px 10px 16px;
-  font-size: 16px;
-  line-height: 24px;
-  height: auto;
-  margin: 0;
+  border: 1px solid #BAC0C4 !important;
+  border-radius: 6px !important;
+  padding: 12px 16px 10px 16px !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  height: auto !important;
+  margin: 0 !important;
 }
 
 .submit-box-container > .element-container {
-  background: #0091E5;
-  border-radius: 100px;
-  display: inline-block;
-  padding: 8px 24px;
-  text-align: center;
-  word-break: break-word;
+  background: #0091E5 !important;
+  border-radius: 100px !important;
+  display: inline-block !important;
+  padding: 8px 24px !important;
+  text-align: center !important;
+  word-break: break-word !important;
   color: #FFFFFF !important;
   text-decoration: none !important;
-  font-weight: 500;
-  line-height: 24px;
-  font-size: 16px;
-  border: 1px solid #0091E5;
-  cursor: pointer;
-}
-
-#field37 .field-label {
-  display: none !important;
+  font-weight: 500 !important;
+  line-height: 24px !important;
+  font-size: 16px !important;
+  border: 1px solid #0091E5 !important;
+  cursor: pointer !important;
 }
 
 .radio-check {
