--- a/sm/landing/basic.css
+++ b/sm/landing/basic.css
@@ -228,7 +228,13 @@ input.element-container {
   margin: 0 !important;
 }
 
-.radio-check-label {
+.radio-check .checkbox {
+  border: 1px solid #BAC0C4 !important;
+  border-radius: 4px !important;
+  background: #FFFFFF !important;
+}
+
+.radio-check .radio-check-label {
   margin-top: 8px !important;
   margin-left: 8px !important;
 }
@@ -246,4 +252,20 @@ input.element-container {
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
+}
+
+#field12 a, #field12 a:visited {
+  color: #232629 !important;
+}
+
+#field13 > div > div {
+  text-align: center !important;
+  padding-bottom: 24px !important;
+}
+
+#field13 > div > div {
+  text-align: center !important;
+  padding-bottom: 24px !important;
+  font-family: "AvertaPE", Arial, Helvetica, sans-serif !important;
+  font-weight: 700;
 }
