--- a/alessiodamonti/css/main.css
+++ b/alessiodamonti/css/main.css
@@ -52,8 +52,9 @@ h3 {
   display: flex;
   justify-content: center;
   background-color: white;
+  font-weight: 500;
   border-radius: 100px;
-  padding: 16px 0;
+  padding: 12px 0;
   width: 100%;
   color: #0091E5 !important;
   text-decoration: none;
@@ -76,7 +77,7 @@ h3 {
   text-decoration: none;
   background-color: #0091E5;
   color: white;
-  padding: 8px 0;
+  padding: 12px 0;
 }
 
 .bg-image-box {
